Auslagerung der Hexagon Logik / Anzeige in eigene Komponente

--- a/src/app/show-map/show-map.component.html
+++ b/src/app/show-map/show-map.component.html
@@ -1,1 +1,3 @@
-<p>show-map works!</p>
+<h1>Show Map</h1>
+<div class="row"><app-hexagon></app-hexagon></div>
+<div class="row"><app-hexagon></app-hexagon></div>
