--- a/src/app/show-map/show-map.component.css
+++ b/src/app/show-map/show-map.component.css
@@ -1,3 +1,7 @@
+/* show-map.component.css */
+
 canvas {
-  display: block;
+  width: 100%;
+  height: 500px; /* Passe die Höhe nach Bedarf an */
+  border: 1px solid #ccc; /* Rahmen, um das Canvas sichtbar zu machen */
 }
