--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,19 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>{{ title }}</h1>
-    </div>
+  <div class="d-flex flex-row justify-content-center">
+    <h1>{{ title }}</h1>
   </div>
-  <div class="row">
+  <div class="d-flex flex-row justify-content-center">
     <mat-form-field>
-      <mat-select>
+      <mat-select [(value)]="gameToPlay" (selectionChange)="selectGame($event)">
+        <mat-label>Spielauswahl</mat-label>
+        <mat-option value="Tsukuyumi">Tsukuyumi</mat-option>
+        <mat-option value="SiedlerVonCatan">Siedler von Catan</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="d-flex flex-row justify-content-center">
+    <mat-form-field>
+      <mat-select (selectionChange)="selectPlayer($event)">
         <mat-label>Anz. Spieler</mat-label>
         <mat-option value="2">2</mat-option>
         <mat-option value="3">3</mat-option>
@@ -16,16 +23,22 @@
       </mat-select>
     </mat-form-field>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <mat-checkbox class="example-margin">Default Settings</mat-checkbox>
-    </div>
+  <div class="d-flex flex-row justify-content-center">
+    <mat-checkbox
+      [checked]="defaultSettings"
+      (change)="isDefaultSetting($event)"
+      >Default Settings</mat-checkbox
+    >
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <button type="button" routerLink="/show-map" mat-button color="primary">
-        Map Generieren!
-      </button>
-    </div>
+  <div class="d-flex flex-row justify-content-center">
+    <app-tsukuyumi-config-options
+      *ngIf="!defaultSettings"
+    ></app-tsukuyumi-config-options>
+  </div>
+
+  <div class="d-flex flex-row justify-content-center">
+    <button routerLink="/show-map" mat-raised-button color="primary">
+      Map Generieren!
+    </button>
   </div>
 </div>
