Anpassung der Regelwerke und Verbesserung der Konfigurierbarkeit

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  flex-wrap: wrap; /* Container wird bei Bedarf in eine neue Zeile verschoben */
+  flex-wrap: wrap;
 }
 
 .main-content {
