--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,11 +19,9 @@
       <mat-form-field>
         <mat-select (selectionChange)="selectPlayer($event)">
           <mat-label>Anz. Spieler</mat-label>
-          <mat-option value="2">2</mat-option>
-          <mat-option value="3">3</mat-option>
-          <mat-option value="4">4</mat-option>
-          <mat-option value="5">5</mat-option>
-          <mat-option value="6">6</mat-option>
+          <mat-option *ngFor="let value of [2, 3, 4, 5, 6]" [value]="value">{{
+            value
+          }}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
