--- a/src/app/show-map/show-map.component.css
+++ b/src/app/show-map/show-map.component.css
@@ -2,6 +2,14 @@ canvas {
   margin-top: 20px;
 }
 
+.center-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
 .refresh-button {
   font-size: 24px;
   padding: 10px 20px;
