--- a/src/app/show-map/show-map.component.html
+++ b/src/app/show-map/show-map.component.html
@@ -1,5 +1,7 @@
-<div class="main-wrapper">
-  <canvas #pixiCanvas></canvas>
+<div class="center-container">
+  <div class="text-center">
+    <canvas #pixiCanvas></canvas>
+  </div>
   <div class="d-flex flex-row justify-content-center">
     <button
       (click)="refreshGrid()"
